# EBV-_coverage_status_model

./: .env.example  .gitignore  Dockerfile  MODEL_ARCHITECTURE.md  README.md  agumnet_data.py  approve_model.py  batch_predict.py  coverage_classification_model.py  data_processing.py  etl_ingest.py  etl_snapshot.py  etl_transform.py  etl_validate.py  main.py  model_evaluation.py  pyproject.toml  train_model.py
.github/workflows/: ci.yml  deploy.yml
coverage_pipeline/: __init__.py  config.py  db.py  normalization.py
coverage_pipeline/ml/: __init__.py  artifact_store.py  registry.py  train.py
coverage_pipeline/pipeline/: __init__.py  ingest.py  snapshot.py  transform.py  validate.py
coverage_pipeline/service/: __init__.py  api.py
data/: Acronym 2026.xlsx  Acronym.csv  Acronym_2026_cleaned.csv  Acronym_cleaned.csv
data/Before_cleaning original_data/: Cleaned_January_Acronym_2026.csv
data/Cleaned Output/: Cleaned_January_Acronym_2026.csv  Cleaned_January_Acronym_2026_augmented.csv  Cleaned_January_Acronym_2026_v1.csv
data/Old Dataset/: Acronym 2026(Acronym).csv  (+1 more)
k8s/: deployment.yaml  ingress.yaml  service.yaml
legacy/: agumnet_data.py  coverage_classification_model.py  data_processing.py  main.py
models/: coverage_model._3.pkl  coverage_model.pkl
reports/: evaluation_report_20260204_122128.txt  training_report_20260205_171518.txt  training_report_20260206_112641.txt  training_report_20260212_112344.txt  training_report_20260218_115140.txt  training_report_20260220_122041.txt  training_report_20260220_161956.txt
scripts/: check_approved_model.py  init_db.py
sql/: 001_init_pipeline.sql
tests/: test_normalization.py
(+1 files in other folders)
