[project]
name = "coverage"
version = "0.1.0"
description = "Coverage ETL, model training, and prediction service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "imbalanced-learn>=0.14.1",
    "joblib>=1.5.3",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.2.10",
    "scikit-learn>=1.7.1",
    "tabulate>=0.9.0",
    "uvicorn>=0.35.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
